# nexgen_branding_landing_page

./: MANIFEST.in  README.md  package.json  pyproject.toml  setup.py  write_toml.py
nexgen_branding/: hooks.py  license.txt  modules.txt  pyproject.toml
nexgen_branding/config/: desktop.py
nexgen_branding/nexgen_branding/: boot.py
nexgen_branding/nexgen_branding/public/js/: nexgen_web.js
nexgen_branding/public/css/: nexgen_desk.css  nexgen_web.css
nexgen_branding/public/js/: nexgen_desk.js
nexgen_branding/templates/includes/: footer_powered.html
nexgen_landing/: index.html  style.css
