[project]
name = "nexgen_branding"
authors = [
    { name = "NexGen Enterprises", email = "info@nexgenenterprises.com" }
]
description = "White-label branding for NexGen ERP"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "frappe"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"
