[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nexgen_branding"
version = "1.0.0"
description = "White-label branding for NexGen ERP, CRM, and HRMS (Frappe v15/v16)"
readme = "README.md"
license = { file = "license.txt" }
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://nexgenenterprises.com"
